# DSA-Showcase

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Autocorrect.cpp.64456308FCFAC30B.idx  Autocorrect.h.1EB59C1FC8E119C1.idx  Backtracking.cpp.0FB77F3F10102FD3.idx  Backtracking.h.31079FED9201D312.idx  Constants.h.B9CBEB3E8B250A69.idx  DFA.cpp.B16C9545E03214AF.idx  DFA.h.7178CA3495749891.idx  FileReader.cpp.EBC4B404E08455F3.idx  FileReader.h.44F4D7E12181F1EB.idx  Heap.cpp.7C9E8BC6F3826C7D.idx  Heap.h.1A8D89EB85EFA5A5.idx  Home.cpp.A0F6CB3EF2770655.idx  Home.h.17F0A2304C3B2F57.idx  Minesweeper.cpp.8AF12CF08B5BEE1C.idx  Minesweeper.h.305B53D4FEB9B10D.idx  Model.cpp.92C71E4868839A3B.idx  Model.h.0E5CBF3498900CEC.idx  Node.cpp.93CD40230C7DA906.idx  Node.cpp.CD14C5833C203BDB.idx  Node.h.3FC6B45E82768307.idx  Node.h.C5D85CE6C04532C9.idx  Puzzle.cpp.23D954F7738C2519.idx  Puzzle.h.34AC8C3A68380874.idx  PuzzleState.cpp.76BE85133518A68C.idx  PuzzleState.h.769AA3A59FDF401B.idx  State.cpp.CBA00B892279D554.idx  State.h.C08B6F843DC5F1CB.idx  StateMachine.cpp.7DBBB4070E7550E0.idx  StateMachine.h.63275B83F32A0592.idx  (+5 more)
Autocorrect/: Autocorrect.cpp  Autocorrect.h  FileReader.cpp  FileReader.h  Heap.cpp  Heap.h  Word.cpp  Word.h  WordSort.cpp  WordSort.h
Home/: Home.cpp  Home.h
Minesweeper/: Backtracking.cpp  Backtracking.h  Minesweeper.cpp  Minesweeper.h  Model.cpp  Model.h  Node.cpp  Node.h
SlidingPuzzle/: Constants.h  Node.h  Puzzle.cpp  Puzzle.h  PuzzleState.cpp  PuzzleState.h
StateMachine/: DFA.cpp  DFA.h  StateMachine.cpp  StateMachine.h
